--- a/src/searchgithub.kv
+++ b/src/searchgithub.kv
@@ -1,6 +1,12 @@
-<TelaInical>:
-    InputText:
-        text: ""
+<TelaInicial@BoxLayout>:
+    orientantion: "vertical"
+
+    TextInput:
+        size_hint: .07, .07
+        pos_hint: {"top": 0, "y":1}
+        font_size: 24
 
     Button:
+        size_hint: .03, .07
+        pos_hint: {"top": 0, "y":1}
         text: "Pesquisar"
